# visionguard

./: .gitignore  Dockerfile  Makefile  README.en.md  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
assets/: evaluation_test.json  real_evaluation_test.json
configs/: yolov8_neu_det.yaml
cpp/: CMakeLists.txt
cpp/include/: grpc_server.h  image_preprocessor.h  inference_engine.h
cpp/proto/: visionguard.proto
cpp/src/: grpc_server.cpp  image_preprocessor.cpp  inference_engine.cpp  main.cpp
cpp/tests/: test_inference.cpp
deployment/docker/: Dockerfile.cpp
deployment/scripts/: deploy.sh  health_check.sh
deployment/systemd/: visionguard.service
docs/: architecture.md  cpp_build.md  dataset.md  timeline.md
docs/superpowers/plans/: 2025-08-01-visionguard-scaffold-and-data.md  2025-08-15-visionguard-training-and-evaluation.md  2025-09-01-visionguard-cpp-inference.md
docs/superpowers/specs/: 2026-07-01-visionguard-design.md  2026-07-01-yolov8n-augmented-training-design.md
notebooks/: 01_explore_neu_det.ipynb
reports/: benchmark_report.md
scripts/: __init__.py  benchmark.py  convert_annotations.py  demo_inference.py  download_neu_det.py  evaluate.py  export_onnx.py  generate_synthetic_data.py  install_torch_gpu.py  train_yolo.py  train_yolo_aug.py
tests/: test_converter.py  test_dataset_utils.py  test_detector.py  test_download_neu_det.py  test_postprocessor.py  test_preprocessor.py
visionguard/: __init__.py  exceptions.py  logging_setup.py
visionguard/core/: __init__.py  detector.py  postprocessor.py  preprocessor.py
visionguard/utils/: dataset_utils.py  visualization.py
