[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionguard"
version = "0.1.0"
description = "Industrial surface defect detection with YOLOv8 and C++ ONNX Runtime inference"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "VisionGuard Team", email = "visionguard@example.com" }
]
keywords = ["computer-vision", "defect-detection", "yolo", "onnx", "industrial-inspection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "ultralytics>=8.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "gdown>=5.0.0",
    "pyyaml>=6.0.1",
    "pillow>=10.0.0",
    "onnxruntime>=1.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "pre-commit>=3.7.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.scripts]
vg-download = "scripts.download_neu_det:main"
vg-convert = "scripts.convert_annotations:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["visionguard*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["Makefile"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
